--- a/BlogPostFour.html
+++ b/BlogPostFour.html
@@ -49,7 +49,7 @@
 
 		<h2>Data Art Implementation Essay</h2>
 
-		<article class = "blog-post  h-feed">
+		<article class = "blog-post  h-feed blog-four" >
 
 			<p class = "blog1-text">
 				The goal of data art is to produce attractive shapes and creative works from the digital nature of big data sets (graphics, simulations, worksheets, statistics, etc.). Our environment's virtual data can be converted into images, objects, or sounds. Data art also demonstrates the underlying connections that exist between the pervasive algorithms in our lives — numbers from databases, raw data, data obtained by search engines, computations and statistics (geographic, political, meteorological, and financial) and creative production (Grugier, .et al, 2016).
@@ -127,16 +127,16 @@ The shape chosen here is a circle. I could have used other types of shapes or li
 
 		<p class = source-links>
 			
-				<li>		Benzi, K. (2020). What is Data Art? Available at: https://www.kirellbenzi.com/blog/data-artdefinition#:~:text=Data%20Art%20or%20data%2Ddriven,come%20from%20the%20artist's%20imagination. (Accessed on: 28 October 2022)</li>
-				<li>Grugier, M., et al. (2016). The digital age of data art • TechCrunch. Available at: https://techcrunch.com/2016/05/08/the-digital-age-of-data-art/( Accessed on: 28 October 2022)</li>
+				<li class = "blog1-text">		Benzi, K. (2020). What is Data Art? Available at: https://www.kirellbenzi.com/blog/data-artdefinition#:~:text=Data%20Art%20or%20data%2Ddriven,come%20from%20the%20artist's%20imagination. (Accessed on: 28 October 2022)</li>
+				<li class = "blog1-text">Grugier, M., et al. (2016). The digital age of data art • TechCrunch. Available at: https://techcrunch.com/2016/05/08/the-digital-age-of-data-art/( Accessed on: 28 October 2022)</li>
 
-				<li>Riche, N., et al. (2020). Data-Driven Storytelling.</li>
-				<li>OxfordLearnersDictionary. Interactive. OxfordLearnersDictionary [online]. Available at: https://www.oxfordlearnersdictionaries.com/definition/english/interactive Accessed (1 October 2022</li>
+				<li class = "blog1-text">Riche, N., et al. (2020). Data-Driven Storytelling.</li>
+				<li class = "blog1-text">OxfordLearnersDictionary. Interactive. OxfordLearnersDictionary [online]. Available at: https://www.oxfordlearnersdictionaries.com/definition/english/interactive Accessed (1 October 2022</li>
 
-				<p class = "source-links"> Images</p>
+				<p class = "blog1-text"> Images</p>
 
-				<li>Harris, J., Kamvar, S. We feel fine. Available at: https://techcrunch.com/2016/05/08/the-digital-age-of-data-art/( Accessed on: 28 October 2022)</li>
-				<li>Oliver, J. Packet Garden. Data Art. Making the intangible visible. Available at: https://techcrunch.com/2016/05/08/the-digital-age-of-data-art/( Accessed on: 28 October 2022)</li>
+				<li class = "blog1-text">Harris, J., Kamvar, S. We feel fine. Available at: https://techcrunch.com/2016/05/08/the-digital-age-of-data-art/( Accessed on: 28 October 2022)</li>
+				<li class = "blog1-text">Oliver, J. Packet Garden. Data Art. Making the intangible visible. Available at: https://techcrunch.com/2016/05/08/the-digital-age-of-data-art/( Accessed on: 28 October 2022)</li>
 
 				
 				
