--- a/BlogPostTwo.html
+++ b/BlogPostTwo.html
@@ -56,7 +56,6 @@
 				In this brief essay I will be focusing on the UI and UX of my first prototype. Although, there is still plenty of work and hour to be contributed into completing the finishing product, I will, however, work with what I currently have and talk about the UI and UX that is recognizable so far.
 			</p>
 
-		
 
 			<p class = "blog1-text">
 				When it comes to the difference its important to associate each discipline as unique organizational roles. UX is more data-driven projection of how customers are expected to feel when visiting one’s website (Guest, 2021). UI on the other hand, incorporates design patterns and the smallest details into consideration. Overall, UI concerns itself with the layout of the design, as well as making it enjoyable to use, whereas UX concerns itself with the concerns of ease of usage, responsiveness, and seamlessness (Guest, 2021).
@@ -80,7 +79,7 @@
 
 		<p class = source-links>
 			
-				<li>Guest (2021). “UX vs UI: How They Work Together in Web Design”. Forge and Smith, 8 Jan. Available at: https://forgeandsmith.com/blog/ux-vs-ui-how-they-work-together-in-web-design/ (Accessed: 14 August 2022)</li>
+				<li class = "blog1-text">Guest (2021). “UX vs UI: How They Work Together in Web Design”. Forge and Smith, 8 Jan. Available at: https://forgeandsmith.com/blog/ux-vs-ui-how-they-work-together-in-web-design/ (Accessed: 14 August 2022)</li>
 				
 				
 
@@ -93,8 +92,10 @@
 	</section>
 </section>
 </main>	 
-<footer class="footer">
-	&copy; BADABLING.com
+<footer class="footer h-card">
+
+    <p class = "u-email">&copy; BADABLING.com</p>
+
 </footer>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
