--- a/DataArt/ExamDataArt.html
+++ b/DataArt/ExamDataArt.html
@@ -47,8 +47,8 @@
   <body class="opening hide-UI view-2D zoom-large data-close controls-close">
     <section id="navbar">
       <a id="toggle-data" href="#data"><i class="icon-data"></i>Data</a>
-      <h1 class = "solar-title">Solar System - Data Art</h1>
-      <h2> Planet's speed, size and distance in relation to the sun.</>
+      <h1 class = "solar-title">Solar System - Exam Data Art</h1>
+      <h2> A visual representation of planet's speed, size and distance in relation to the sun.</h2>
 
       <a id="toggle-controls" href="#controls"><i class="icon-controls"></i>Controls</a>
     </section>
@@ -62,6 +62,10 @@
       <a class="saturn" title="saturn" href="#saturnspeed">Saturn</a>
       <a class="uranus" title="uranus" href="#uranusspeed">Uranus</a>
       <a class="neptune" title="neptune" href="#neptunespeed">Neptune</a>
+    </section>
+    <section id = "examlink-data">
+      <a href="dataArt.html">View Prototype Data</a>
+  
     </section>
     <aside id="controls">
       <label class="set-view">
@@ -182,7 +186,6 @@
       </section>
     </section>
     
-    <H1> Planet's speed, size and distance in relation to the sun.</H1>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script type="/text/javascript">
     if (typeof jQuery == 'undefined') { 
