--- a/blogPostOne.html
+++ b/blogPostOne.html
@@ -87,14 +87,14 @@
 			
 			<p class = source-links>
 			
-				<li>	Dundas BI. (2019). “A Brief History of Data Visualization”, Dundas BI, September. Available at: <a>https://www.dundas.com/resources/blogs/introduction-to-business-intelligence/brief-history-data-visualization</a> (Accessed: 3 August 2022)</li>
-				<li>	Image: https://www.dundas.com/resources/blogs/introduction-to-business-intelligence/brief-history-data-visualization</li>
-				<li>	Kirk, A. (2012). Data visualization: A successful design process. Birmingham: Packt Publishing.</li>
-				<li>	Li, Q. (2020). Overview of Data Visualization. Springer, Singapore. https://doi.org/10.1007/978-981-15-5069-0_2</li>
-				<li>	Lupi, G. (2016). “Beautiful Reasons”. Medium, 20 Jan. Available at: https://medium.com/accurat-in-sight/beautiful-reasons-c1c6926ab7d7 (Accessed: 3 August 2022).</li>
-				<li>	Lupi, G. (2016). “Beautiful Reasons”. Medium, 20 Jan. Available at: https://medium.com/accurat-in-sight/beautiful-reasons-c1c6926ab7d7 (Accessed: 3 August 2022).</li>
-				<li>	McCandless, D. “The beauty of data visualization.” TED, Nov. 2009, https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization/transcript?language=en </li>
-				<li>	Van Wijk, J. J. (2006). Views on visualization. IEEE Transactions on Visualization and Computer Graphics, 12(4), 421–432</li>
+				<li class = "blog1-text">	Dundas BI. (2019). “A Brief History of Data Visualization”, Dundas BI, September. Available at: <a>https://www.dundas.com/resources/blogs/introduction-to-business-intelligence/brief-history-data-visualization</a> (Accessed: 3 August 2022)</li>
+				<li class = "blog1-text">	Image: https://www.dundas.com/resources/blogs/introduction-to-business-intelligence/brief-history-data-visualization</li>
+				<li class = "blog1-text">	Kirk, A. (2012). Data visualization: A successful design process. Birmingham: Packt Publishing.</li>
+				<li class = "blog1-text">	Li, Q. (2020). Overview of Data Visualization. Springer, Singapore. https://doi.org/10.1007/978-981-15-5069-0_2</li>
+				<li class = "blog1-text">	Lupi, G. (2016). “Beautiful Reasons”. Medium, 20 Jan. Available at: https://medium.com/accurat-in-sight/beautiful-reasons-c1c6926ab7d7 (Accessed: 3 August 2022).</li>
+				<li class = "blog1-text">	Lupi, G. (2016). “Beautiful Reasons”. Medium, 20 Jan. Available at: https://medium.com/accurat-in-sight/beautiful-reasons-c1c6926ab7d7 (Accessed: 3 August 2022).</li>
+				<li class = "blog1-text">	McCandless, D. “The beauty of data visualization.” TED, Nov. 2009, https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization/transcript?language=en </li>
+				<li class = "blog1-text">	Van Wijk, J. J. (2006). Views on visualization. IEEE Transactions on Visualization and Computer Graphics, 12(4), 421–432</li>
 	
 			
 		</p>
