--- a/DataArt/dataArt.html
+++ b/DataArt/dataArt.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title dir="ltr">Exam Data Art</title>
-    <link rel="stylesheet" type="text/css" href="styles-exam-data.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles-exam-data.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="../css/blog.css">
 <link rel="stylesheet" type="text/css" href="..css/responsive.css">
@@ -183,8 +183,8 @@
       document.write(unescape("%3Cscript src='js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));
     }
     </script>
-    <script src="/js/prefixfree.min.js"></script>
-    <script src="/js/scripts.min.js"></script>
+    <script src="../js/prefixfree.min.js"></script>
+    <script src="../js/scripts.min.js"></script>
     
  <footer class="footer-exam">
     <p class = "u-email">&copy; BADABLING.com</p>
