--- a/DataArt/ExamDataArt.html
+++ b/DataArt/ExamDataArt.html
@@ -192,8 +192,8 @@
       document.write(unescape("%3Cscript src='js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));
     }
     </script>
-    <script src="/js/prefixfree.min.js"></script>
-    <script src="/js/scripts.min.js"></script>
+    <script src="../js/prefixfree.min.js"></script>
+    <script src="../js/examArt.js"></script>
     
  <footer class="footer-exam">
     <p class = "u-email">&copy; BADABLING.com</p>
