--- a/DataArt/dataArt.html
+++ b/DataArt/dataArt.html
@@ -184,7 +184,7 @@
     }
     </script>
     <script src="../js/prefixfree.min.js"></script>
-    <script src="../js/scripts.min.js"></script>
+    <script src="../js/examArt.min.js"></script>
     
  <footer class="footer-exam">
     <p class = "u-email">&copy; BADABLING.com</p>
