--- a/DataArt/ExamDataArt.html
+++ b/DataArt/ExamDataArt.html
@@ -193,7 +193,7 @@
     }
     </script>
     <script src="../js/prefixfree.min.js"></script>
-    <script src="../js/examArt.js"></script>
+    <script src="../js/examArt.min.js"></script>
     
  <footer class="footer-exam">
     <p class = "u-email">&copy; BADABLING.com</p>
