--- a/BlogPostFive.html
+++ b/BlogPostFive.html
@@ -125,12 +125,12 @@
 		<p class = blog1-text>
 			
 				<li  class = blog1-text>		Benzi, K. (2020). What is Data Art? Available at: https://www.kirellbenzi.com/blog/data-artdefinition#:~:text=Data%20Art%20or%20data%2Ddriven,come%20from%20the%20artist's%20imagination. (Accessed on: 28 October 2022)</li>
-				<li class = blog1-text>•	Kidd, J. (2015). Representation. Routledge </li>
+				<li class = blog1-text>Kidd, J. (2015). Representation. Routledge </li>
 
 				<li class = blog1-text>Riche, N., et al. (2020). Data-Driven Storytelling.</li>
-				<li class = blog1-text>•	Roeser, S. (2016). How Art Can Contribute to Ethical Reflection on Risky Technologies, in Janssens(ed) (2016). The art of ethics in the information society. </li>
+				<li class = blog1-text>Roeser, S. (2016). How Art Can Contribute to Ethical Reflection on Risky Technologies, in Janssens(ed) (2016). The art of ethics in the information society. </li>
 
-				<li class = blog1-text>•	Viegas, F.B and Wattenberg, M. (2007) Artistic Data Visualisation: Beyond Visual Analytics. Visual Communication Lab. Cambridge.  </li>
+				<li class = blog1-text>Viegas, F.B and Wattenberg, M. (2007) Artistic Data Visualisation: Beyond Visual Analytics. Visual Communication Lab. Cambridge.  </li>
 
 				
 
